# effect-broker

./: .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: NEXT_PROJECT_RESEARCH.md  NEXT_PROJECT_SPEC.md  OBSERVABILITY.md
examples/: contracts.yaml
examples/crash_matrix/: runner.py  target.py  worker.py
src/effect_broker/: __init__.py  api.py  auth.py  canonical.py  cli.py  config.py  contracts.py  engine.py  errors.py  mcp_server.py  models.py  observability.py  reconcile.py  statemachine.py  worker.py
src/effect_broker/adapters/: __init__.py  base.py  simulated.py
src/effect_broker/store/: __init__.py  base.py  memory.py  postgres.py  sqlite.py
src/effect_broker/store/migrations/: __init__.py  env.py
src/effect_broker/store/migrations/versions/: 0001_initial_postgres_store.py  __init__.py
tests/: test_api.py  test_cli.py  test_core.py  test_crash_matrix.py  test_engine.py  test_observability.py  test_safety_classes.py  test_store_conformance.py
tests/integration/: test_postgres_crash.py
