[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "effect-broker"
version = "0.1.0"
description = "A correctness boundary for side-effecting agent tools: stable intent, downstream idempotency, authoritative reconciliation, and honest outcome_unknown instead of a fake exactly-once guarantee."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "prathamesh-git9" }]
keywords = ["idempotency", "exactly-once", "agents", "durable-execution", "reconciliation", "reliability"]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "cryptography>=42.0",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
mcp = ["mcp>=1.2"]
llm = ["openai>=1.40"]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "hypothesis>=6.100",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.scripts]
effect-broker = "effect_broker.cli:app"

[project.urls]
Homepage = "https://github.com/prathamesh-git9/effect-broker"
Issues = "https://github.com/prathamesh-git9/effect-broker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/effect_broker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]
